--- a/app/src/main/res/layout/activity_record_of_prescription.xml
+++ b/app/src/main/res/layout/activity_record_of_prescription.xml
@@ -12,6 +12,8 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"/>
     <com.jude.easyrecyclerview.EasyRecyclerView
+        android:layout_marginTop="10dp"
+        android:layout_marginHorizontal="10dp"
         android:id="@+id/record_easy"
         app:layout_empty="@layout/easyrecycleview_empty"
         android:layout_width="match_parent"
