--- a/app/src/main/res/layout/recordprescription_item.xml
+++ b/app/src/main/res/layout/recordprescription_item.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="80dp">
+    android:layout_height="80dp"
+    android:background="@drawable/drugandweight_shape"
+    >
 
     <TextView
+        android:textColor="@color/black"
+        android:paddingEnd="10dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         android:text="2018年 7月 6 日"
